--- a/线程基础.md
+++ b/线程基础.md
@@ -165,12 +165,12 @@ thread01.start();
 thread02.start();
 ```
 
-### 线程终止
+## 三、线程终止
 
 1. 线程完成任务后，会自动推出
 2. 还可以通过**使用变量**来控制run方法退出，来停止线程，即**通知方式**，例如flag =true
 
-### 线程常用的方法
+## 四、线程常用的方法
 
 1. seName
 
@@ -229,7 +229,7 @@ thread02.start();
 
     
 
-### 用户线程和守护线程
+## 五、用户线程和守护线程
 
 1. 用户线程：也叫工作线程，当线程的**任务执行完毕**或**通知方式** 才结束
 2. 守护线程：一般时为工作线程服务的，当所有的用户线程结束，守护线程自动结束
@@ -271,6 +271,223 @@ class T implements Runnable{
             }
             System.out.println("子线程"+Thread.currentThread().getName()+"正在陨星");
             i++;
+        }
+    }
+}
+```
+
+## 六、线程的生命周期
+
+![20200627093155744](https://s2.loli.net/2022/05/30/1G9F3yJBrj8WwTH.jpg)
+
+#### **新建状态（New）**
+
+我们可以通过实现`Runnable`接口或继承`Thread`声明一个线程类，`new`一个实例后，线程就进入了新建状态。
+
+#### 就绪状态（Ready）
+
+线程对象创建成功后，调用该线程的`start()`函数，线程进入就绪状态，该状态的线程进入可运行线程池中，等待获取`C P U`的使用权。
+
+#### 运行状态（Running)
+
+此时线程调度程序正在从**可运行线程池**中选择一个线程，该线程进入运行状态。换句话说，线程获取到了`C P U`时间片。
+
+#### 终止状态（Terminated）
+
+线程继续运行，直到执行结束或执行过程中因异常意外终止都会使线程进入终止状态。
+
+线程一旦终止，就不能复生，这是不可逆的过程。
+
+#### 等待状态（Waiting）
+
+运行状态的线程执行wait()、join()、LockSupport.park()任意函数，该线程进入等待状态。
+
+其中`wait()`与`join()`函数会让J V M把该线程放入锁等待队列。
+
+处于这种状态的线程不会被分配C P U执行时间，它们要等待被**主动唤醒**，否则会一直处于等待状态。
+
+#### 超时等待状态（Timed waiting）
+
+超时等待与等待状态一样，唯一的区别就是多了超时机制，不会一直等待被其他线程主动唤醒，而是到达指定时间后会**自动唤醒**。
+
+以下函数会触发进入超时等待状态
+
+- **wait(long)**
+- **join(long)**
+- **LockSupport.parkNanos(long)**
+- **LockSupport.parkUtil(long)**
+- **sleep(long)**
+
+其中`wait(long)、join(long)`函数会让J V M把线程放入锁等待队列。
+
+#### 阻塞状态（Blocked）
+
+运行状态的线程获取同步锁失败或发出`I/O`请求，该线程进入阻塞状态。
+
+如果是获取同步锁失败`J V M`还会把该线程放入锁的同步队列。
+
+## 七、线程的同步
+
+在多线程编程，一些敏感数据不允许被多个线程同时访问，此时就使用同步访问技术，保证数据在任何同一时刻，最多有一个线程访问，以保证数据的完整性
+
+也可以这样理解，线程同步，即当有一个线程在对内存进行操作时，其他线程都不可以对这个内存地址进行操作，直到该线程完成操作，其他线程才可以对这个内存地址进行访问操作
+
+### synchronized
+
+【Java并发编程之深入理解】Synchronized的使用https://blog.csdn.net/zjy15203167987/article/details/82531772
+
+**为什么需要synchronized**
+
+在[并发编程](https://so.csdn.net/so/search?q=并发编程&spm=1001.2101.3001.7020)中存在线程安全问题，主要原因有：1.存在共享数据 2.多线程共同操作共享数据。关键字synchronized可以保证在同一时刻，只有一个线程可以执行某个方法或某个代码块，同时synchronized可以保证一个线程的变化可见（可见性），即可以代替volatile。
+
+**原理**
+
+synchronized可以保证方法或者代码块在运行时，同一时刻只有一个方法可以进入到临界区，同时它还可以保证共享变量的内存可见性
+
+**三种应用方式**
+
+Java中每一个对象都可以作为锁，这是synchronized实现同步的基础：
+
+1. 普通同步方法（实例方法），锁是当前实例对象 ，进入同步代码前要获得当前实例的锁
+2. 静态同步方法，锁是当前类的class对象 ，进入同步代码前要获得当前类对象的锁
+3. 同步方法块，锁是括号里面的对象，对给定对象加锁，进入同步代码库前要获得给定对象的锁。
+
+
+
+**多线程模拟售票**
+
+```java
+package thread;
+
+/**
+ * @version 1.0
+ * 使用多线程，模拟三个窗口同时售票 100 张
+ */
+public class SellTicket {
+    public static void main(String[] args) {
+        //测试
+        // SellTicket01 sellTicket01 = new SellTicket01();
+        // SellTicket01 sellTicket02 = new SellTicket01();
+        // SellTicket01 sellTicket03 = new SellTicket01();
+        //
+        // //这里我们会出现超卖.. // sellTicket01.start();//启动
+        // sellTicket02.start();//启动售票线程
+        // sellTicket03.start();//启动售票线程
+        // System.out.println("===使用实现接口方式来售票=====");
+        // SellTicket02 sellTicket02 = new SellTicket02();
+        //
+        // new Thread(sellTicket02).start();//第 1 个线程-窗口
+        // new Thread(sellTicket02).start();//第 2 个线程-窗口
+        // new Thread(sellTicket02).start();//第 3 个线程-窗口
+        //测试一把
+        SellTicket03 sellTicket03 = new SellTicket03();
+        new Thread(sellTicket03).start();//第 1 个线程-窗口
+        new Thread(sellTicket03).start();//第 2 个线程-窗口
+        new Thread(sellTicket03).start();//第 3 个线程-窗口
+    }
+}
+
+//实现接口方式, 使用 synchronized 实现线程同步
+class SellTicket03 implements Runnable {
+    private int ticketNum = 100;//让多个线程共享 ticketNum
+    private boolean loop = true;//控制 run 方法变量
+    Object object = new Object();
+    //同步方法（静态的）的锁为当前类本身
+    //1. public synchronized static void m1() {} 锁是加在 SellTicket03.class
+    //2. 如果在静态方法中，实现一个同步代码块.
+    /*
+        synchronized (SellTicket03.class)
+
+        {
+            System.out.println("m2");
+        }
+    */
+
+    public synchronized static void m1() {
+    }
+
+    public static void m2() {
+        synchronized (SellTicket03.class) {
+            System.out.println("m2");
+        }
+    }
+
+
+    //1. public synchronized void sell() {} 就是一个同步方法
+    //2. 这时锁在 this 对象
+    //3. 也可以在代码块上写 synchronize ,同步代码块, 互斥锁还是在 this 对象
+    public /*synchronized*/ void sell() { //同步方法, 在同一时刻， 只能有一个线程来执行 sell
+        synchronized (/*this*/ object) {
+            if (ticketNum <= 0) {
+                System.out.println("售票结束...");
+                loop = false;
+                return;
+            }
+            //休眠 50 毫秒, 模拟
+            try {
+                Thread.sleep(50);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("窗口 " + Thread.currentThread().getName() + " 售出一张票" + " 剩余票数=" + (--ticketNum));//1 - 0 - -1 - -2
+        }
+    }
+
+    @Override
+    public void run() {
+        while (loop) {
+            sell();//sell 方法是一共同步方法
+        }
+    }
+}
+
+//使用 Thread 方式
+// new SellTicket01().start()
+// new SellTicket01().start();
+class SellTicket01 extends Thread {
+    private static int ticketNum = 100;//让多个线程共享 ticketNum
+
+    // public void m1() {
+    // synchronized (this) {
+    // System.out.println("hello");
+    // }
+    // }
+    @Override
+    public void run() {
+        while (true) {
+            if (ticketNum <= 0) {
+                System.out.println("售票结束...");
+                break;
+            }
+            //休眠 50 毫秒, 模拟
+            try {
+                Thread.sleep(50);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("窗口 " + Thread.currentThread().getName() + " 售出一张票" + " 剩余票数=" + (--ticketNum));
+        }
+    }
+}
+
+//实现接口方式
+class SellTicket02 implements Runnable {
+    private int ticketNum = 100;//让多个线程共享 ticketNum
+
+    @Override
+    public void run() {
+        while (true) {
+            if (ticketNum <= 0) {
+                System.out.println("售票结束...");
+                break;
+            }
+            //休眠 50 毫秒, 模拟
+            try {
+                Thread.sleep(50);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("窗口 " + Thread.currentThread().getName() + " 售出一张票" + " 剩余票数=" + (--ticketNum));//1 - 0 - -1 - -2
         }
     }
 }
