新增mybatis学习笔记

--- a/集合.md
+++ b/集合.md
@@ -1,5 +1,7 @@
 # 集合
 
+![src=http___yqfile.alicdn.com_img_a74d00b5f19c2ad3616c1d04e7a6b20e.png&refer=http___yqfile.alicdn](src=http___yqfile.alicdn.com_img_a74d00b5f19c2ad3616c1d04e7a6b20e.png&refer=http___yqfile.alicdn.webp)
+
 ## 一、集合的理解和好处
 
 ### 数组
