--- a/枚举和注解.md
+++ b/枚举和注解.md
@@ -171,7 +171,7 @@ class test {
 5. valueOf：将字符串转换成枚举对象，要求字符串必须 为已有的常量名，否则报异常！
 6. compareTo：比较两个枚举常量，比较的就是编号！
 
-![image-20220120160253172](https://s2.loli.net/2022/05/09/UCzdJABO2gGQamr.png)
+![UCzdJABO2gGQamr](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/UCzdJABO2gGQamr.png)
 
 ```
 //Season枚举类为上个代码块中的类
