--- a/集合.md
+++ b/集合.md
@@ -1,6 +1,6 @@
 # 集合
 
-![src=http___yqfile.alicdn.com_img_a74d00b5f19c2ad3616c1d04e7a6b20e.png&refer=http___yqfile.alicdn](src=http___yqfile.alicdn.com_img_a74d00b5f19c2ad3616c1d04e7a6b20e.png&refer=http___yqfile.alicdn.webp)
+![集合体系图](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/%E9%9B%86%E5%90%88%E4%BD%93%E7%B3%BB%E5%9B%BE.jpg)
 
 ## 一、集合的理解和好处
 
@@ -22,11 +22,11 @@
 
 **Collection**
 
-![image-20220122175613327](https://s2.loli.net/2022/05/09/Nhtn1AcxVO7pfrk.png)
+![Nhtn1AcxVO7pfrk](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/Nhtn1AcxVO7pfrk.png)
 
 **Map**
 
-![image-20220122180220136](https://s2.loli.net/2022/05/09/9s1UlbB8ApmtvFJ.png)
+![5TjryWHBYDQOfG6](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/5TjryWHBYDQOfG6.png)
 
 
 
@@ -205,7 +205,7 @@ for(元素类型 元素名 : 集合名或数组名) {
 2. List 集合中的每个元素都有其对应的顺序索引，即支持索引
 3. JDK API中List接口的实现类如下图，常用的有ArrayList，LinkedList和Vector
 
-![image-20220122191916853](https://s2.loli.net/2022/05/09/kW1cuSI76xAQaTB.png)
+![kW1cuSI76xAQaTB](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/kW1cuSI76xAQaTB.png)
 
 ### **List常用方法**
 
@@ -299,11 +299,11 @@ public class ArrayListSource {
 }
 ```
 
-![image-20220227103354047](https://s2.loli.net/2022/05/09/wrbNFc4nDVXeAYO.png)
-
-![image-20220227103502778](https://s2.loli.net/2022/05/09/M8yhfIDWLbFP5ta.png)
 
 
+![wrbNFc4nDVXeAYO](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/wrbNFc4nDVXeAYO.png)
+
+![M8yhfIDWLbFP5ta](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/M8yhfIDWLbFP5ta.png)
 
 ## 六、List接口实现类Vector
 
