--- a/面向对象复习.md
+++ b/面向对象复习.md
@@ -1,7 +1,3 @@
----
-typora-copy-images-to: upload
----
-
 **面向对象复习**
 
 # 类与对象
@@ -31,7 +27,7 @@ p.age = 1
 
 **对象在内存中存在形式**
 
-![image-20220112105852138](https://s2.loli.net/2022/05/09/HO8jim1GCX7qvSW.png)
+![HO8jim1GCX7qvSW](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/HO8jim1GCX7qvSW-16634126487041.png)
 
 cat称为对象的引用，真正的对象在堆中
 
@@ -52,7 +48,7 @@ new的时候类的信息会加载到方法区
 
 ## 方法的调用机制原理
 
-![image-20220112184102693](https://s2.loli.net/2022/05/09/nfi7GT26dVQu3rt.png)
+![nfi7GT26dVQu3rt](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/nfi7GT26dVQu3rt.png)
 
 ## **访问修饰符** 
 
@@ -106,7 +102,7 @@ new的时候类的信息会加载到方法区
 
 3.**实例**
 
-![image-20220115112320718](https://s2.loli.net/2022/05/09/cuvE3jI5OM9rq2K.png)
+![cuvE3jI5OM9rq2K](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/cuvE3jI5OM9rq2K.png)
 
 
 
@@ -466,7 +462,7 @@ Person p = new Person("xiaoming",20);
 
 概念：java虚拟机会给每个对象分配this，代表当前对象，哪个对象调用，this就表示当前对象
 
-![image-20220115174757893](https://s2.loli.net/2022/05/09/i7qXb3cdwg4CxVp.png)
+![i7qXb3cdwg4CxVp](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/i7qXb3cdwg4CxVp.png)
 
 **用法**
 
@@ -620,7 +616,7 @@ class Son extends Father { //子类
 }
 ```
 
-![image-20220116165352498](https://s2.loli.net/2022/05/09/UNqsGtg2Zn9SXcY.png)
+![UNqsGtg2Zn9SXcY](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/UNqsGtg2Zn9SXcY.png)
 
 ## 多态
 
@@ -763,9 +759,9 @@ class B extends A {//子类
 
 super和this的比较
 
-![image-20220116172428504](https://s2.loli.net/2022/05/09/wzQbvJsF8hVaciP.png)
 
 
+![wzQbvJsF8hVaciP](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/wzQbvJsF8hVaciP.png)
 
 # 方法重写/覆盖(override)
 
