--- a/面向对象高级.md
+++ b/面向对象高级.md
@@ -265,7 +265,7 @@ abstract class Animal {
 
 *TemplatePatternDemo*，我们的演示类使用 *Game* 来演示模板模式的用法。
 
-![image-20220118165804600](https://s2.loli.net/2022/05/09/mpGsX9eWRdu3if4.png)
+![mpGsX9eWRdu3if4](https://xunfeng-images.oss-cn-shenzhen.aliyuncs.com/xfTyporaImages/mpGsX9eWRdu3if4.png)
 
 # 接口interface
 
